# cw_4

./: README.md  main.py  pyproject.toml
data/: vacancies.json  vacancies.txt
src/: hh_api.py  json_saver.py  txt_saver.py
tests/: conftest.py  test_json_saver.py
